test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/address_of_wrong_union_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[45]:
  union
  identifier(u)
  {
  int
  identifier(i)
  ;
  char
  identifier(c)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(foo)
  =
  {
  const int(0)
  }
  ;
  union
  identifier(u)
  {
  int
  identifier(i)
  ;
  char
  identifier(c)
  ;
  }
  ;
  union
  identifier(u)
  *
  identifier(ptr)
  =
  &
  identifier(foo)
  ;
  }
